--- a/style.css
+++ b/style.css
@@ -34,7 +34,29 @@ button {
     border: none;
 }
 
-#container {
+.container {
+    width: 100%;
+    height: 100vh;
+    padding: 4rem;
+}
+
+button.newbook {
+    
+    width: 4rem;
+    height: 4rem;
+    border-radius: 5rem;
+    background-color: var(--color-primary);
+    color: var(--color-on-surface);
+    padding:0.5rem;
+
+    cursor: pointer;
+
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+}
+
+.card-container {
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
