--- a/style.css
+++ b/style.css
@@ -134,3 +134,24 @@ button.newbook {
     background-color: var(--color-primary);
     padding: 0.5rem 1rem;
 }
+
+.modal .modal-corner {
+
+    width: 2rem;
+    height: 2rem;
+
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+}
+
+.modal .modal-corner .close {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    padding: 0.125rem;
+}
+
+.modal .modal-corner .close svg {
+    fill: var(--color-on-primary);
+}
