--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ button.newbook {
     position: absolute;
     right: 1.5rem;
     bottom: 1.5rem;
+    cursor: pointer;
 }
 
 .card .checkmark svg {
